dbclient_rs_test is the slowest test.

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.6.0-rc3
    • Affects Version/s: None
    • Component/s: Sharding
    • None
    • Fully Compatible
    • ALL
    • Repl 2017-11-13
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      dbclient_rs_test in master takes 3m9s on my machine (compiled opt on). This is by far the slowest of all the unittests.
      In 3.2 branch it takes 48 seconds.

      All the time difference can be attributed to one subtest, AllNodesDown. In 3.2 it takes 5 sec, in master, 145 sec. Is this affecting performance of replica set monitor, or does the test simply need retooling?

            Assignee:
            Mathias Stearn
            Reporter:
            Eric Milkie
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: