SERVER-26108 Speed up dbclient_rs_test by disabling sleepy retries